# kirjat-rs-api

./: Cargo.toml  Dockerfile  README.md  fly.toml
src/: main.rs
src/handlers/: api_v2.rs  api_v3.rs  mod.rs
