[package]
name = "kirjat-rs-api"
version = "0.4.1"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-web = "4"
env_logger = "0.9.1"
actix-cors = "0.6.3"
serde = "1"
anyhow = { version = "1", features = ["backtrace"] }
kirjat-rs = { version = "0.4.0", default_features = false, features = [ ] }

[profile.release]
debug = true